--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -1,5 +1,6 @@
 @import "../style_partials/varmix";
 @import "../style_partials/loader";
+
 /**
  * Sidebar box
  */
@@ -259,20 +260,40 @@
  */
 .generate-repeater-metabox {
 	position : relative;
-	>.labsolut {
+	> .labsolut {
 		.preview-area {
 			margin-top : 40%;
 		}
 	}
 	section {
+		position         : relative;
 		padding          : 10px;
 		background-color : #eee;
 		border           : 1px solid #ccc;
 		margin-bottom    : 15px;
+
+		button[data-destroy] {
+			position         : absolute;
+			right            : 10px;
+			top              : 10px;
+			background-color : $dangerColor;
+			color            : #fff;
+			border           : 1px solid darken($dangerColor, 5%);
+			box-shadow       : inset 0 2px 2px lighten($dangerColor, 15%);
+			&:focus,
+			&:hover {
+				background-color : darken($dangerColor, 5%);
+				color            : #fff;
+				border           : 1px solid darken($dangerColor, 15%);
+			}
+		}
 	}
 	.hidden-meta-repeater-container {
 		height     : 1px;
 		display    : none;
 		min-height : 0;
+	}
+	.create-section-repeater {
+		text-align : right;
 	}
 }
