Repeater base 20151105031104 Todo: drag and drop with sortable all fields types

--- a/wp-content/plugins/generate-meta/style_partials/_varmix.scss
+++ b/wp-content/plugins/generate-meta/style_partials/_varmix.scss
@@ -1,7 +1,7 @@
 $mainColor : #21759b;
 
 $infoColor : #67a6df;
-$successColor : #2da519;
+$successColor : #5ca545;
 $warningColor : #edcf87;
 $dangerColor : #df4343;
 
