--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -255,6 +255,7 @@
 	}
 }
 
+
 /**
  * Repeater
  */
@@ -262,7 +263,22 @@
 	position : relative;
 	> .labsolut {
 		.preview-area {
-			margin-top : 40%;
+			margin-top : 20%;
+		}
+	}
+	button {
+		&[data-add-section] {
+			background-color : $successColor;
+			color            : #fff;
+			border           : 1px solid darken($successColor, 5%);
+			box-shadow       : inset 0 2px 2px lighten($successColor, 10%);
+			&:focus,
+			&:hover {
+				background-color : darken($successColor, 10%);
+				color            : #fff;
+				border           : 1px solid darken($successColor, 15%);
+				box-shadow: none;
+			}
 		}
 	}
 	section {
@@ -272,19 +288,40 @@
 		border           : 1px solid #ccc;
 		margin-bottom    : 15px;
 
-		button[data-destroy] {
-			position         : absolute;
-			right            : 10px;
-			top              : 10px;
-			background-color : $dangerColor;
-			color            : #fff;
-			border           : 1px solid darken($dangerColor, 5%);
-			box-shadow       : inset 0 2px 2px lighten($dangerColor, 15%);
-			&:focus,
-			&:hover {
-				background-color : darken($dangerColor, 5%);
+		&.collapsed-section {
+			overflow : hidden;
+			height : 60px;
+		}
+
+		> [data-section-head] {
+			text-align : center;
+			font-size : 20px;
+			margin-bottom : 10px;
+			padding : 10px;
+			border: 1px solid #ccc;
+			background-color: lighten($warningColor, 20%);
+			min-height : 40px;
+			cursor : pointer;
+			&:hover{
+				background-color: lighten($warningColor, 10%);
+			}
+		}
+		button {
+			&[data-destroy] {
+				position         : absolute;
+				right            : 10px;
+				top              : 10px;
+				background-color : $dangerColor;
 				color            : #fff;
-				border           : 1px solid darken($dangerColor, 15%);
+				border           : 1px solid darken($dangerColor, 5%);
+				box-shadow       : inset 0 2px 2px lighten($dangerColor, 15%);
+				&:focus,
+				&:hover {
+					background-color : darken($dangerColor, 5%);
+					color            : #fff;
+					border           : 1px solid darken($dangerColor, 15%);
+					box-shadow: none;
+				}
 			}
 		}
 	}
