--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -51,7 +51,7 @@
 }
 
 .GenerateMeta {
-	background : transparentize($infoColor, .7);
+	background : #e0e0e0;
 	padding    : 15px;
 
 	img {
@@ -268,15 +268,15 @@
 	}
 	button {
 		&[data-add-section] {
-			background-color : $successColor;
+			background-color : transparentize($successColor, .2);
 			color            : #fff;
-			border           : 1px solid darken($successColor, 5%);
+			border           : 1px solid transparentize($successColor, .1);
 			box-shadow       : inset 0 2px 2px lighten($successColor, 10%);
 			&:focus,
 			&:hover {
-				background-color : darken($successColor, 10%);
+				background-color : transparentize($successColor, .1);
 				color            : #fff;
-				border           : 1px solid darken($successColor, 15%);
+				border           : 1px solid transparentize($successColor, .1);
 				box-shadow: none;
 			}
 		}
@@ -302,24 +302,27 @@
 			background-color: lighten($warningColor, 20%);
 			min-height : 40px;
 			cursor : pointer;
+			@include transition();
 			&:hover{
 				background-color: lighten($warningColor, 10%);
 			}
 		}
 		button {
 			&[data-destroy] {
+				height : auto;
+				padding : 6px 15px;
 				position         : absolute;
 				right            : 10px;
 				top              : 10px;
-				background-color : $dangerColor;
+				background-color : transparentize($dangerColor, .3);
 				color            : #fff;
-				border           : 1px solid darken($dangerColor, 5%);
+				border           : 1px solid transparentize($dangerColor, .2);
 				box-shadow       : inset 0 2px 2px lighten($dangerColor, 15%);
 				&:focus,
 				&:hover {
-					background-color : darken($dangerColor, 5%);
+					background-color : transparentize($dangerColor, .2);
 					color            : #fff;
-					border           : 1px solid darken($dangerColor, 15%);
+					border           : 1px solid $dangerColor;
 					box-shadow: none;
 				}
 			}
