--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -255,7 +255,6 @@
 	}
 }
 
-
 /**
  * Repeater
  */
@@ -263,7 +262,7 @@
 	position : relative;
 	> .labsolut {
 		.preview-area {
-			margin-top : 20%;
+			margin-top : 100px;
 		}
 	}
 	button {
@@ -335,5 +334,9 @@
 	}
 	.create-section-repeater {
 		text-align : right;
+	}
+	.ui-state-highlight {
+		background-color: $warningColor;
+		min-height : 60px;
 	}
 }
