Repeater base 20153305013347 + sortable +fxcs Todo: all fields types

--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -265,6 +265,9 @@
 			margin-top : 100px;
 		}
 	}
+	p {
+		margin-bottom : 3px;
+	}
 	button {
 		&[data-add-section] {
 			background-color : transparentize($successColor, .2);
