--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -279,7 +279,7 @@
 				background-color : transparentize($successColor, .1);
 				color            : #fff;
 				border           : 1px solid transparentize($successColor, .1);
-				box-shadow: none;
+				box-shadow       : none;
 			}
 		}
 	}
@@ -292,27 +292,27 @@
 
 		&.collapsed-section {
 			overflow : hidden;
-			height : 60px;
+			height   : 60px;
 		}
 
 		> [data-section-head] {
-			text-align : center;
-			font-size : 20px;
-			margin-bottom : 10px;
-			padding : 10px;
-			border: 1px solid #ccc;
-			background-color: lighten($warningColor, 20%);
-			min-height : 40px;
-			cursor : pointer;
+			text-align       : center;
+			font-size        : 20px;
+			margin-bottom    : 10px;
+			padding          : 10px;
+			border           : 1px solid #ccc;
+			background-color : lighten($warningColor, 20%);
+			min-height       : 40px;
+			cursor           : pointer;
 			@include transition();
-			&:hover{
-				background-color: lighten($warningColor, 10%);
+			&:hover {
+				background-color : lighten($warningColor, 10%);
 			}
 		}
 		button {
 			&[data-destroy] {
-				height : auto;
-				padding : 6px 15px;
+				height           : auto;
+				padding          : 6px 15px;
 				position         : absolute;
 				right            : 10px;
 				top              : 10px;
@@ -325,21 +325,56 @@
 					background-color : transparentize($dangerColor, .2);
 					color            : #fff;
 					border           : 1px solid $dangerColor;
-					box-shadow: none;
+					box-shadow       : none;
 				}
 			}
 		}
 	}
+
 	.hidden-meta-repeater-container {
-		height     : 1px;
-		display    : none;
+		height     : 0;
+		width      : 0;
+		opacity    : 0;
 		min-height : 0;
+		margin     : 0;
+		padding    : 0;
+		top : -2px;
+		left : -2px;
+		overflow   : hidden;
+		float      : left;
+		position   : absolute;
 	}
 	.create-section-repeater {
 		text-align : right;
 	}
 	.ui-state-highlight {
-		background-color: $warningColor;
-		min-height : 60px;
+		background-color : $warningColor;
+		min-height       : 60px;
+	}
+	.image-holder {
+		background-color : #fff;
+		&:after,
+		&:before {
+			content : "";
+			display : table;
+			width   : 100%;
+			clear   : both;
+			float   : none;
+		}
+		.image-repeater-wrap {
+			margin : 10px;
+			/*Desktop*/
+			@media (min-width : 952px) {
+				float   : left;
+				width   : 30%;
+				border  : 1px solid #ccc;
+				padding : 5px;
+			}
+			> img {
+				display : block;
+				width   : 100%;
+				height  : auto;
+			}
+		}
 	}
 }
