--- a/wp-content/plugins/generate-meta/style_script/style.scss
+++ b/wp-content/plugins/generate-meta/style_script/style.scss
@@ -230,9 +230,26 @@
 		height          : 84px;
 		-moz-box-sizing : border-box;
 		box-sizing      : border-box;
+		position        : relative;
 		& * {
 			-moz-box-sizing : border-box;
 			box-sizing      : border-box;
+		}
+		[data-delete-current-image] {
+			position         : absolute;
+			right            : 0;
+			display          : block;
+			background-color : $dangerColor;
+			height           : 15px;
+			width            : 15px;
+			cursor : pointer;
+			border-radius    : 50%;
+			text-align       : center;
+			line-height      : 16px;
+			color            : #fff;
+			&:hover{
+				background-color: #000;
+			}
 		}
 	}
 	img {
@@ -338,8 +355,8 @@
 		min-height : 0;
 		margin     : 0;
 		padding    : 0;
-		top : -2px;
-		left : -2px;
+		top        : -2px;
+		left       : -2px;
 		overflow   : hidden;
 		float      : left;
 		position   : absolute;
