20152808052826 stick to top navbar with jq

--- a/wp-content/themes/alicelf-adaptive/style-parts/admin-scripts/admin-style.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/admin-scripts/admin-style.scss
@@ -89,3 +89,8 @@ input[type="password"] {
 #convert-tables-section {
 	min-height : 20px;
 }
+
+.main-theme-titledescr {
+	color : #fff;
+	font-size : 15px;
+}
