--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -12,6 +12,7 @@
 @import "style-parts/_thumbs";
 @import "style-parts/_animate";
 @import "style-parts/_parallax-bg";
+@import "style-parts/_alerts_and_messages";
 
 // Content Parts
 @import "style-parts/_header";
