--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -14,6 +14,9 @@
 @import "style-parts/_parallax-bg";
 @import "style-parts/_alerts_and_messages";
 
+// TransformIcons
+@import "style-parts/transformicons/index/tcons";
+
 // Content Parts
 @import "style-parts/_header";
 @import "style-parts/_main";
