--- a/wp-content/themes/alicelf-adaptive/style-parts/_responsive.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_responsive.scss
@@ -3,10 +3,17 @@
  */
 
 
-.visible-on-desktop-only {
+.visible-on-desktop {
 	/*Tablet*/
 	@media (max-width : 951px) {
 		display : none;
+	}
+}
+
+.hidden-on-desktop {
+	/*To tablet and desktop*/
+	@media (min-width : 952px) {
+		display: none;
 	}
 }
 
