--- a/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
@@ -52,6 +52,14 @@
 	}
 }
 
+
+body {
+	/*Tablet*/
+	@media (max-width : 951px) {
+		overflow-x : hidden;
+	}
+}
+
 .main-navigation {
 	@include transition();
 	/*Tablet*/
@@ -62,14 +70,15 @@
 		left             : 0;
 		width            : 100%;
 		height           : 100%;
+		min-height       : 1000px;
 		z-index          : 98;
 		ul {
-			display : block;
-			width   : 90%;
-			float   : none;
-			margin  : 50px auto 0;
-			padding : 15px;
-			border :1px solid rgba(255, 255, 255, 0.3);
+			display   : block;
+			width     : 90%;
+			float     : none;
+			margin    : 50px auto 0;
+			padding   : 15px;
+			border    : 1px solid rgba(255, 255, 255, 0.3);
 			max-width : 500px;
 		}
 		li {
@@ -77,23 +86,23 @@
 			float   : none;
 			a {
 				color : #fff;
-				&:hover{
-					background-color: rgba(255, 255, 255, 0.35);
+				&:hover {
+					background-color : rgba(255, 255, 255, 0.35);
 				}
 			}
 		}
-	}
 
-	-ms-transform: scale(2); /* IE 9 */
-	-webkit-transform: scale(2); /* Safari */
-	transform: scale(2);
-	opacity: 0;
+		-ms-transform     : scale(2); /* IE 9 */
+		-webkit-transform : scale(2); /* Safari */
+		transform         : scale(2);
+		opacity           : 0;
 
-	&.open-menu {
-		-ms-transform: scale(1); /* IE 9 */
-		-webkit-transform: scale(1); /* Safari */
-		transform: scale(1);
-		opacity: 1;
+		&.open-menu {
+			-ms-transform     : scale(1); /* IE 9 */
+			-webkit-transform : scale(1); /* Safari */
+			transform         : scale(1);
+			opacity           : 1;
+		}
 	}
 
 }
