new menu and transficons - commit -2

--- a/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
@@ -42,6 +42,14 @@
 		z-index  : 99;
 		right    : 5px;
 		top      : 5px;
+		&.tcon-transform {
+			.tcon-menu__lines {
+				&:after,
+				&:before {
+					background-color: #fff;
+				}
+			}
+		}
 	}
 }
 
