--- a/wp-content/themes/alicelf-adaptive/style-parts/_vars.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_vars.scss
@@ -9,3 +9,28 @@ $dangerColor : #df4343;
 
 $opacity : transparentize($mainColor, 0.5);
 $lighten : lighten($mainColor, 50%);
+
+$brand-color : #684fb6;
+
+$gray-base : #000 !default;
+$gray-darker : lighten($gray-base, 13.5%) !default; // #222
+$gray-dark : lighten($gray-base, 20%) !default; // #333
+$gray : lighten($gray-base, 33.5%) !default; // #555
+$gray-light : lighten($gray-base, 46.7%) !default; // #777
+$gray-lighter : lighten($gray-base, 93.5%) !default; // #eee
+
+$state-success-text : #3c763d !default;
+$state-success-bg : #dff0d8 !default;
+$state-success-border : darken(adjust-hue($state-success-bg, -10), 5%) !default;
+
+$state-info-text : #31708f !default;
+$state-info-bg : #d9edf7 !default;
+$state-info-border : darken(adjust-hue($state-info-bg, -10), 7%) !default;
+
+$state-warning-text : #8a6d3b !default;
+$state-warning-bg : #fcf8e3 !default;
+$state-warning-border : darken(adjust-hue($state-warning-bg, -10), 5%) !default;
+
+$state-danger-text : #a94442 !default;
+$state-danger-bg : #f2dede !default;
+$state-danger-border : darken(adjust-hue($state-danger-bg, -10), 5%) !default;
