--- a/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
@@ -2,6 +2,13 @@
 	background-color : #fff;
 }
 
+.disable-scroll {
+	overflow : hidden;
+}
+.enable-scroll {
+	overflow: visible;
+}
+
 .site-logo {
 	display       : block;
 	margin-top    : 15px;
