--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -23,4 +23,4 @@
 @import "style-parts/_footer";
 
 @import "style-parts/_responsive";
-@import "style-parts/_loader";
+@import "style-parts/loaderanimation";
