--- a/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
@@ -9,6 +9,20 @@
 	filter            : progid:DXImageTransform.Microsoft.gradient(startColorstr='#ie-hex-str($color1)', startColorstr='#ie-hex-str($color2)', GradientType=0);
 }
 
+/**
+ * ==================== Horizontal Gradient ======================
+ * 08.04.2016
+ */
+
+@mixin gradientH($color1: $azure, $color2: $light-brand) {
+	background: $color1; /* Old browsers */
+	background: -moz-linear-gradient(left,  $color1 0%, $color2 100%);
+	background: -webkit-linear-gradient(left,  $color1 0%,$color2 100%);
+	background: linear-gradient(to right,  $color1 0%,$color2 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$color1}', endColorstr='#{$color2}',GradientType=1 );
+}
+
+
 @mixin transition($time : 0.3s, $prop : all) {
 	-webkit-transition : $prop, $time;
 	-moz-transition    : $prop, $time;
