User profile process. Step - 3

--- a/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
@@ -129,3 +129,12 @@
 	margin-left  : auto;
 	margin-right : auto;
 }
+
+
+#custom-adminbar-userpic {
+	width : auto;
+	height : 26px;
+	float : left;
+	margin-right : 5px;
+	margin-top : 3px;
+}
