User profile process. Step - 3.1

--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -18,9 +18,10 @@
 @import "style-parts/transformicons/index/tcons";
 
 // Content Parts
-@import "style-parts/_header";
-@import "style-parts/_main";
-@import "style-parts/_footer";
+@import "style-parts/header";
+@import "style-parts/main";
+@import "style-parts/user";
+@import "style-parts/footer";
 
 @import "style-parts/_responsive";
 @import "style-parts/loaderanimation";
