--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -1,8 +1,8 @@
 /*!
  Theme Name: Alicelf Adaptive
  Author: Alicelf dev
- Description: simple adaptive, development theme. ReduxFramework based
- Version: 3.1.2
+ Description: simple adaptive, development theme
+ Version: 3.5.0
  Tags: white, one-column, two-columns, customizable, theme-editor, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, translation-ready
  */
 
