--- a/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
@@ -1,3 +1,50 @@
+.modal-backdrop {
+	background-color : rgba(255, 255, 255, 0.67);
+	position         : fixed;
+	display          : none;
+	width            : 100%;
+	height           : 100%;
+	z-index          : 200;
+	opacity          : 0;
+	@include transition();
+	.aa-modal-container {
+		position          : absolute;
+		top               : 100px;
+		left              : 50%;
+		width             : 100%;
+		max-width         : 1000px;
+		margin-left       : -500px;
+		max-height        : 650px;
+		overflow-y        : auto;
+		z-index           : 5;
+		padding           : 15px;
+		border-radius     : 3px;
+		background-color  : #fff;
+		border            : 1px solid #ccc;
+		-ms-transform     : scale(.5); /* IE 9 */
+		-webkit-transform : scale(.5); /* Safari */
+		transform         : scale(.5);
+		@include transition();
+	}
+	/*Mobile*/
+	@media (max-width : 1005px) {
+		.aa-modal-container {
+			display     : block;
+			width       : 100%;
+			left        : auto;
+			margin-left : auto;
+		}
+	}
+	&.show {
+		opacity : 1;
+		.aa-modal-container {
+			-ms-transform     : scale(1); /* IE 9 */
+			-webkit-transform : scale(1); /* Safari */
+			transform         : scale(1);
+		}
+	}
+}
+
 .alert-backdrop {
 	background-color : rgba(255, 255, 255, 0.67);
 	position         : fixed;
@@ -21,6 +68,7 @@
 		transform         : scale(.5);
 		@include transition();
 	}
+
 	/*Mobile*/
 	@media (max-width : 767px) {
 		.alert {
