--- a/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_mix.scss
@@ -81,8 +81,8 @@
 @mixin textFields {
 
 	border-radius : 0;
-	padding       : 4px;
 	border        : 1px solid #cccccc;
+	margin-bottom : 10px;
 	@include transition;
 	&:focus {
 		outline      : 0;
