--- a/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
@@ -1,6 +1,6 @@
-.modal-backdrop {
+.modal-backdrop[itemscope="aa-modal"] {
 	background-color : rgba(255, 255, 255, 0.67);
-	position         : fixed;
+	position         : absolute;
 	display          : none;
 	width            : 100%;
 	height           : 100%;
@@ -14,7 +14,6 @@
 		width             : 100%;
 		max-width         : 1000px;
 		margin-left       : -500px;
-		max-height        : 650px;
 		overflow-y        : auto;
 		z-index           : 5;
 		padding           : 15px;
