--- a/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
@@ -1,6 +1,20 @@
+body.aa-modal-overlay {
+	overflow-y : hidden;
+}
+
+i[data-destroy-modal] {
+	position  : absolute;
+	right     : 10px;
+	cursor    : pointer;
+	font-size : 18px;
+	&:hover{
+		color : $dangerColor;
+	}
+}
+
 .modal-backdrop[itemscope="aa-modal"] {
 	background-color : rgba(255, 255, 255, 0.67);
-	position         : absolute;
+	position         : fixed;
 	display          : none;
 	width            : 100%;
 	height           : 100%;
@@ -9,7 +23,8 @@
 	@include transition();
 	.aa-modal-container {
 		position          : absolute;
-		top               : 100px;
+		max-height        : 90%;
+		top               : 60px;
 		left              : 50%;
 		width             : 100%;
 		max-width         : 1000px;
