--- a/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_alerts_and_messages.scss
@@ -1,106 +1,9 @@
-body.aa-modal-overlay {
-	overflow-y : hidden;
+@mixin scaleModal($scale: 0.5){
+	-ms-transform     : scale($scale);
+	-webkit-transform : scale($scale);
+	transform         : scale($scale);
 }
 
-i[data-destroy-modal] {
-	position  : absolute;
-	right     : 10px;
-	cursor    : pointer;
-	font-size : 18px;
-	&:hover{
-		color : $dangerColor;
-	}
-}
-
-.modal-backdrop[itemscope="aa-modal"] {
-	background-color : rgba(255, 255, 255, 0.67);
-	position         : fixed;
-	display          : none;
-	width            : 100%;
-	height           : 100%;
-	z-index          : 9991;
-	opacity          : 0;
-	@include transition();
-	.aa-modal-container {
-		position          : absolute;
-		max-height        : 90%;
-		top               : 60px;
-		left              : 50%;
-		width             : 100%;
-		max-width         : 1000px;
-		margin-left       : -500px;
-		overflow-y        : auto;
-		z-index           : 5;
-		padding           : 15px;
-		border-radius     : 3px;
-		background-color  : #fff;
-		border            : 1px solid #ccc;
-		-ms-transform     : scale(.5); /* IE 9 */
-		-webkit-transform : scale(.5); /* Safari */
-		transform         : scale(.5);
-		@include transition();
-	}
-	/*Mobile*/
-	@media (max-width : 1005px) {
-		.aa-modal-container {
-			display     : block;
-			width       : 100%;
-			left        : auto;
-			margin-left : auto;
-		}
-	}
-	&.show {
-		opacity : 1;
-		.aa-modal-container {
-			-ms-transform     : scale(1); /* IE 9 */
-			-webkit-transform : scale(1); /* Safari */
-			transform         : scale(1);
-		}
-	}
-}
-
-.alert-backdrop {
-	background-color : rgba(255, 255, 255, 0.67);
-	position         : fixed;
-	display          : block;
-	width            : 100%;
-	height           : 100%;
-	z-index          : 200;
-	opacity          : 0;
-	@include transition();
-	.alert {
-		position          : absolute;
-		top               : 100px;
-		left              : 50%;
-		width             : 100%;
-		max-width         : 500px;
-		margin-left       : -250px;
-		z-index           : 5;
-		text-align        : center;
-		-ms-transform     : scale(.5); /* IE 9 */
-		-webkit-transform : scale(.5); /* Safari */
-		transform         : scale(.5);
-		@include transition();
-	}
-
-	/*Mobile*/
-	@media (max-width : 767px) {
-		.alert {
-			display     : block;
-			width       : 100%;
-			left        : auto;
-			margin-left : auto;
-		}
-	}
-	&.show {
-		opacity : 1;
-		.alert {
-			-ms-transform     : scale(1); /* IE 9 */
-			-webkit-transform : scale(1); /* Safari */
-			transform         : scale(1);
-		}
-	}
-}
 
 @mixin modalMix($container, $wide) {
 	#{$container} {
@@ -125,29 +28,136 @@ i[data-destroy-modal] {
 	}
 }
 
-/**
- * ==================== Registration ======================
- * 23.04.2016
- */
-.login-register-optgroups {
-	position    : relative;
-	padding-top : 30px;
-	.alert, [data-progress] {
-		position : absolute;
-		top      : 0;
-		left     : 0;
-		width    : 100%;
+
+body.aa-modal-overlay {
+	overflow-y : hidden;
+}
+
+i[data-destroy-modal] {
+	position  : absolute;
+	right     : 10px;
+	cursor    : pointer;
+	font-size : 18px;
+	&:hover {
+		color : $dangerColor;
 	}
-	.alert {
-		z-index       : 1;
-		padding       : 10px 15px;
-		margin-bottom : 0;
-		h3 {
-			margin    : 0;
-			font-size : 16px;
+}
+
+/**
+ * ==================================================
+ * ==================== Modals ======================
+ * ==================================================
+ */
+.modal-backdrop[itemscope="aa-modal"] {
+	background-color : rgba(255, 255, 255, 0.67);
+	position         : fixed;
+	display          : none;
+	width            : 100%;
+	height           : 100%;
+	z-index          : 9991;
+	opacity          : 0;
+	@include transition();
+	.aa-modal-container {
+		position          : absolute;
+		max-height        : 90%;
+		top               : 60px;
+		left              : 50%;
+		width             : 100%;
+		max-width         : 1000px;
+		margin-left       : -500px;
+		overflow-y        : auto;
+		z-index           : 5;
+		padding           : 15px;
+		border-radius     : 3px;
+		background-color  : #fff;
+		border            : 1px solid #ccc;
+		@include transition();
+
+		/**
+		 * =========================================================================
+		 * ==================== Default Modal animation state ======================
+		 * =========================================================================
+		 */
+		&[data-animation="scale"] {
+			@include scaleModal();
+		}
+
+	}
+	/*Mobile*/
+	@media (max-width : 1005px) {
+		.aa-modal-container {
+			display     : block;
+			width       : 100%;
+			left        : auto;
+			margin-left : auto;
 		}
 	}
-	[data-progress] {
-		z-index : 2;
+	&.show {
+		opacity : 1;
+		.aa-modal-container {
+
+			/**
+			 * =================================================================
+			 * ==================== Show modal Animations ======================
+			 * =================================================================
+			 */
+			&[data-animation="scale"] {
+				@include scaleModal(1);
+			}
+
+		}
+	}
+}
+
+
+/**
+ * ==================================================
+ * ==================== Alerts ======================
+ * ==================================================
+ */
+.alert-backdrop {
+	background-color : rgba(255, 255, 255, 0.67);
+	position         : fixed;
+	display          : block;
+	width            : 100%;
+	height           : 100%;
+	z-index          : 200;
+	opacity          : 0;
+	@include transition();
+	.alert {
+		position          : absolute;
+		top               : 100px;
+		left              : 50%;
+		width             : 100%;
+		max-width         : 500px;
+		margin-left       : -250px;
+		z-index           : 5;
+		text-align        : center;
+		@include transition();
+
+		// @TODO: diff animaitons
+		-ms-transform     : scale(.5);
+		-webkit-transform : scale(.5);
+		transform         : scale(.5);
+	}
+
+	/*Mobile*/
+	@media (max-width : 767px) {
+		.alert {
+			display     : block;
+			width       : 100%;
+			left        : auto;
+			margin-left : auto;
+		}
+	}
+	&.show {
+		opacity : 1;
+		.alert {
+
+			// @TODO: diff animations
+			-ms-transform     : scale(1);
+			-webkit-transform : scale(1);
+			transform         : scale(1);
+		}
 	}
 }
