--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -12,8 +12,8 @@
 @import "style-parts/basics";
 @import "style-parts/thumbs";
 @import "style-parts/animate";
-@import "style-parts/parallax-bg";
-@import "style-parts/alerts_and_messages";
+@import "style-parts/alerts_modals";
+@import "style-parts/popup";
 @import "style-parts/media";
 
 // TransformIcons
