Theme updated to 3.6 @TODO: add popup func-ty @TODO: create upload files @TODO: add angular

--- a/wp-content/plugins/aa_payment/style/style.scss
+++ b/wp-content/plugins/aa_payment/style/style.scss
@@ -17,3 +17,12 @@
 .aa-pluginsloader-holder {
 	position : relative;
 }
+
+#toplevel_page_aa_payment {
+	.wp-menu-image {
+		&:before {
+			@include fAwesome();
+			content: "\f07a"; //"\f217"
+		}
+	}
+}
