--- a/wp-content/themes/alicelf-adaptive/style.css
+++ b/wp-content/themes/alicelf-adaptive/style.css
@@ -1,6 +1,8 @@
 /*!
  Theme Name: Alicelf Adaptive
- Author: Alicelf dev
+ Author: Alicelf WebArtisan
+ Author Uri: http://www.upwork.com/fl/olegtsibulnik
+ Theme URI: 
  Description: simple adaptive, development theme
  Version: 3.6.1
  Tags: white, one-column, two-columns, customizable, theme-editor, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, translation-ready
