--- a/wp-content/plugins/aa_payment/style/style_partials/_varmix.scss
+++ b/wp-content/plugins/aa_payment/style/style_partials/_varmix.scss
@@ -41,3 +41,86 @@ $lighten : lighten($mainColor, 50%);
 		clear: both;
 	}
 }
+
+/**
+ * ==================== Content Markup ======================
+ * 10.07.2016
+ */
+%space-x-section {
+	float : none;
+	clear: both;
+	display: block;
+	width : 100%;
+	@include clearfix();
+}
+
+@mixin space-x {
+	@for $i from 1 through 10 {
+		.space-x-#{$i}0 {
+			@extend %space-x-section;
+			height : ($i*10)+px;
+		}
+	}
+}
+@mixin padding-top-x {
+	@for $i from 1 through 10 {
+		.padding-top-#{$i}0 {
+			/*Desktop*/
+			@media (min-width : 952px) {
+				padding-top : ($i*10)+px;
+			}
+		}
+	}
+}
+@mixin padding-bottom-x {
+	@for $i from 1 through 10 {
+		.padding-bottom-#{$i}0 {
+			/*Desktop*/
+			@media (min-width : 952px) {
+				padding-bottom : ($i*10)+px;
+			}
+		}
+	}
+}
+@mixin padding-left-x {
+	@for $i from 1 through 10 {
+		.padding-left-#{$i}0 {
+			/*Desktop*/
+			@media (min-width : 952px) {
+				padding-left : ($i*10)+px;
+			}
+		}
+	}
+}
+@mixin padding-right-x {
+	@for $i from 1 through 10 {
+		.padding-right-#{$i}0 {
+			/*Desktop*/
+			@media (min-width : 952px) {
+				padding-right : ($i*10)+px;
+			}
+		}
+	}
+}
+
+@include space-x();
+@include padding-top-x();
+@include padding-bottom-x();
+@include padding-left-x();
+@include padding-right-x();
+
+@mixin fAwesome(){
+	display: inline-block;
+	font: normal normal normal 14px/1 FontAwesome;
+	font-size: inherit;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.img-center {
+	img {
+		margin-left : auto;
+		margin-right : auto;
+	}
+}
