Theme updated to 3.6 @TODO: add popup func-ty @TODO: create upload files @TODO: add angular

--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -1,9 +1,9 @@
 /*!
  Theme Name: Alicelf Adaptive
+ Theme URI: https://github.com/Nayami/alicelf_theme
  Author: Alicelf WebArtisan
  Author Uri: http://www.upwork.com/fl/olegtsibulnik
- Theme URI:
- Description: simple adaptive, development theme
+ Description: Adaptive, development theme with complex solutions. Good start to any project type.
  Version: 3.6.1
  Tags: white, one-column, two-columns, customizable, theme-editor, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, translation-ready
  */
