plugin aa_payment + acf @TODO: add popup func-ty @TODO: create upload files @TODO: add angular

--- a/wp-content/themes/alicelf-adaptive/style-parts/admin-scripts/admin-style.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/admin-scripts/admin-style.scss
@@ -84,6 +84,7 @@ input[type="password"] {
 
 body {
 
+
 	&.post-type-acf-field-group {
 		#wpbody {
 			.acf-hl {
@@ -95,9 +96,9 @@ body {
 	}
 
 }
-
+.acf-input-prepend, .acf-input-append,
 .acf-gallery .acf-gallery-toolbar {
-	height : auto;
+	height : auto !important;
 }
 
 //Additional Styles
