--- a/wp-content/themes/alicelf-adaptive/style.scss
+++ b/wp-content/themes/alicelf-adaptive/style.scss
@@ -8,6 +8,7 @@
  Tags: white, one-column, two-columns, customizable, theme-editor, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, translation-ready
  */
 
+@import "style-parts/fonts";
 @import "style-parts/vars";
 @import "style-parts/mix";
 @import "style-parts/plugins_integration";
