--- a/wp-content/themes/alicelf-adaptive/style-parts/_vars.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_vars.scss
@@ -1,5 +1,7 @@
 $baseFont : "Open Sans", sans-serif;
 
+$text-color : #504d4d;
+
 $gilsans : "emoGillsans";
 $gilsansLight : "gillsans-light";
 .gilsans {
