--- a/wp-content/themes/alicelf-adaptive/partials/inst_component/style.scss
+++ b/wp-content/themes/alicelf-adaptive/partials/inst_component/style.scss
@@ -1,4 +1,9 @@
 $mainColor : #000;
+$OswaldLight : 'OswaldLight';
+$OswaldRegular : 'OswaldRegular';
+$OswaldDemiBold : 'OswaldDemiBold';
+$OswaldBold : 'OswaldBold';
+$baseFont : "Open Sans", sans-serif;
 
 @mixin transition($time : 0.3s, $prop : all) {
 	-webkit-transition : $prop, $time;
@@ -16,82 +21,31 @@ $mainColor : #000;
 	-moz-osx-font-smoothing : grayscale;
 }
 
-.aa-socials-list {
-	list-style    : none;
-	display       : inline-block;
-	margin-bottom : 75px;
-	padding-left : 0;
-
-	> li {
-		display : inline-block;
-		a {
-			display         : block;
-			width           : 60px;
-			height          : 60px;
-			background-size : contain;
-			font-size       : 1px;
-			color           : transparent;
-			&:hover {
-				opacity : .5;
-			}
-		}
-		&:not(:last-of-type) {
-			margin-right : 10px;
-		}
-		&.bw-facebook {
-			a {
-				background-image : url("img/fb-newpic.jpg");
-			}
-		}
-		&.bw-twitter {
-			a {
-				background-image : url("img/tw-newpic.jpg");
-			}
-		}
-		&.bw-pinterest {
-			a {
-				background-image : url("img/pin-newpic.jpg");
-			}
-		}
-		&.bw-instagram {
-			a {
-				background-image : url("img/insta-newpic.jpg");
-			}
-		}
-	}
-}
-
-.keepup-line {
-	line-height: 25px;
-	letter-spacing: 0.4px;
-	font-weight: 400;
-	font-style: normal;
-	color: #333;
-}
-
-.background-line {
+.followusoninstagram {
+	font            : normal 16px $baseFont;
+	color           : #000;
+	font-weight     : 900;
+	text-transform  : uppercase;
 	text-align      : center;
-	color           : $mainColor;
-	font-size       : 48px;
-	line-height     : 80px;
 	display         : flex;
 	flex-direction  : row;
 	justify-content : center;
+	margin-bottom   : 10px;
 	&:before, &:after {
 		flex-grow        : 1;
-		height           : 1px;
+		height           : 2px;
 		content          : '\a0';
-		background-color : black;
+		background-color : #f5f5f5;
 		position         : relative;
 		top              : 0.8em;
 	}
 	&:before {
-		margin-right : 20px;
-		margin-left  : 15%;
+		margin-right : 50px;
+		margin-left  : 2%;
 	}
 	&:after {
-		margin-left  : 20px;
-		margin-right : 15%;
+		margin-left  : 50px;
+		margin-right : 2%;
 	}
 }
 
@@ -99,17 +53,23 @@ $mainColor : #000;
 	opacity : 0;
 	@include transition();
 }
+
 #instagram-footer-widget {
 	/*To tablet and desktop*/
 	@media (min-width : 768px) {
+		#sbi_images .sbi_item {
+			padding : 0 !important;
+		}
 		.sbi_item, .sbi_type_image, .sbi_type_video {
 			width    : 197px !important;
 			height   : 194px !important;
+
 			overflow : hidden;
 			a {
 				max-height : 205px !important;
 			}
 		}
+
 		#footer-instawrapper {
 			overflow-x : hidden;
 			.mCSB_scrollTools.mCSB_1_scrollbar.mCSB_scrollTools_horizontal {
@@ -147,7 +107,6 @@ $mainColor : #000;
 		}
 	}
 }
-
 
 #mobile-instagramm-reel {
 	#sbi_images {
