--- a/wp-content/themes/alicelf-adaptive/style-parts/_plugins_integration.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_plugins_integration.scss
@@ -26,3 +26,87 @@
 		}
 	}
 }
+
+
+.aa-socials-list {
+	list-style    : none;
+	display       : inline-block;
+	margin-bottom : 75px;
+	padding-left  : 0;
+
+	> li {
+		display : inline-block;
+		a {
+			display         : block;
+			width           : 60px;
+			height          : 60px;
+			background-size : contain;
+			font-size       : 1px;
+			color           : transparent;
+			&:hover {
+				opacity : .5;
+			}
+		}
+		&:not(:last-of-type) {
+			margin-right : 10px;
+		}
+		&.bw-facebook {
+			a {
+				background-image : url("img/fb-newpic.jpg");
+			}
+		}
+		&.bw-twitter {
+			a {
+				background-image : url("img/tw-newpic.jpg");
+			}
+		}
+		&.bw-pinterest {
+			a {
+				background-image : url("img/pin-newpic.jpg");
+			}
+		}
+		&.bw-instagram {
+			a {
+				background-image : url("img/insta-newpic.jpg");
+			}
+		}
+	}
+}
+
+.keepup-line {
+	line-height    : 25px;
+	letter-spacing : 0.4px;
+	font-weight    : 400;
+	font-style     : normal;
+	color          : #333;
+	margin-top     : 35px;
+	margin-bottom  : 35px;
+}
+
+.background-line {
+	text-align      : center;
+	font-size       : 48px;
+	line-height     : 80px;
+	display         : flex;
+	flex-direction  : row;
+	justify-content : center;
+	color           : #000;
+	font-family     : $OswaldDemiBold;
+
+	&:before, &:after {
+		flex-grow        : 1;
+		height           : 1px;
+		content          : '\a0';
+		background-color : #000;
+		position         : relative;
+		top              : 0.8em;
+	}
+	&:before {
+		margin-right : 20px;
+		margin-left  : 15%;
+	}
+	&:after {
+		margin-left  : 20px;
+		margin-right : 15%;
+	}
+}
